# miniLLM

./: .TODO.md  .gitignore  Dockerfile  Dockerfile.vllm  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-serve.txt  requirements.txt
docs/: AGENT.md  LEARNING.md
idea-stage/: 3B_EXPERIMENTS_ARCHIVE.md  ACL_EMNLP_PLAN.md  FIX_IDEAS_2026_04_21.md  FULL_RESULTS_2026_04_23.md  HONEST_ASSESSMENT.md  IDEA_DISCOVERY_3B_RL_2026_04_23.md  IDEA_REPORT.md  NOVELTY_REVIEW_2026_04_21.md  PER_DIFFICULTY_DIAGNOSTIC_3B.md  RESEARCH_REVIEW.md  REVIEW_7B_PLAN_2026_04_24.md  REWARD_HACKING_DIAGNOSTIC.md  SKE_VS_DENSE_HONEST_2026_04_27.md  SOTA_BASELINES.md  V5_FINAL_RESULTS.md  V5_RESULTS.md
miniLLM/: __init__.py  eval.py  eval_agent.py  eval_spider.py  model_loader.py  prompts.py  sql_eval.py  train.py  train_distill.py  train_grpo.py
monitoring/: grafana-dashboard.json  prometheus.yml
outputs/: bench_hf_vs_vllm.json  eval_baseline_3b_200.json  eval_baseline_3b_50.json  eval_baseline_3b_held.json  eval_baseline_3b_held_server.json  eval_baseline_3b_held_v2.json  eval_baseline_50.json  eval_clean_holdout.json  eval_finetuned_3b_200.json  eval_finetuned_3b_50.json  eval_finetuned_3b_held.json  eval_finetuned_3b_held_server.json  eval_kd_3b_held_v2.json  eval_random_holdout.json  eval_sft_3b_held_v2.json  quant_comparison.json
paper/: SKELETON.md
refine-logs/: 3B_REDECOMP_FINDING_2026-04-30.md  A0_OPTION_2_3_SPIKE_2026-04-29.md  A0_PRE_AUDIT_FINDING_2026-04-29.md  B4_RESULT_v3_PREDICTION_FALSIFIED_2026-04-30.md  EXPERIMENT_PLAN.md  EXPERIMENT_TRACKER.md  (+34 more)
(+55 files in other folders)
